[package]
name = "zkp-rust-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
merk = {git="https://github.com/nomic-io/merk.git"}
thiserror = "1.0.38"
hex = "0.4.3"
async-trait = "0.1.64"
futures = "0.3.21"
derive_builder = "0.12.0"