[package]
name = "zkp-rust-storage2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
failure = "0.1.8"
merk = {git="https://github.com/nomic-io/merk.git"}
thiserror = "1.0.38"
hex = "0.4.3"
async-trait = "0.1.64"
futures = "0.3.21"
derive_builder = "0.12.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

hash-db = "0.15.2"
memory-db = "0.31.0"
sparse-merkle-tree = "0.6.1"
hash256-std-hasher = "0.15.2"
crossbeam = "0.8.2"

waitgroup = "0.1.2"
